force-app/main/default/objects/Activity/fields/Activity_Month__c.field-meta.xml
<CustomField>
    <fullName>Activity_Month__c</fullName>
    <description>Month of Activity displayed as the first date of that month.</description>
    <formula>ActivityDate-DAY(ActivityDate)+1</formula>
    <label>Activity Month</label>
    <type>Date</type>
</CustomField>