force-app/main/default/objects/Activity/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>Requested by Bennett 5/16/2022. Field to hold attendees names who are not in the Name field.</description>
    <inlineHelpText>Enter the names of people who attended the meeting who are not in the Name field.</inlineHelpText>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>