force-app/main/default/objects/Activity/fields/AutorabitExtId__c.field-meta.xml
<CustomField>
    <fullName>AutorabitExtId__c</fullName>
    <description>External Id created by AutoRABIT</description>
    <externalId>true</externalId>
    <label>AutorabitExtId__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>