force-app/main/default/objects/Activity/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <inlineHelpText>This field is created to log the Phone Label in Orum.</inlineHelpText>
    <label>Call Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>