force-app/main/default/objects/Activity/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone Call Connected</fullName>
            </value>
            <value>
                <fullName>Phone Call Left No Voice Message</fullName>
            </value>
            <value>
                <fullName>Phone Call Left Voice Message</fullName>
            </value>
            <value>
                <fullName>Requested Callback later</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>