force-app/main/default/objects/Activity/fields/Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Address__c</fullName>
    <inlineHelpText>For Physical Gift only.</inlineHelpText>
    <label>Contact Mailing Address</label>
    <type>TextArea</type>
</CustomField>