force-app/main/default/objects/Activity/fields/Created_By_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role_Name__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is created  for reporting purpose.</inlineHelpText>
    <label>Created By Role Name</label>
    <type>Text</type>
</CustomField>