force-app/main/default/objects/Activity/fields/Date_DC_Held__c.field-meta.xml
<CustomField>
    <fullName>Date_DC_Held__c</fullName>
    <inlineHelpText>Date Discovery Call is Scheduled For/Completed</inlineHelpText>
    <label>Date DC Held</label>
    <type>Date</type>
</CustomField>