force-app/main/default/objects/Activity/fields/Date_Demo_Held__c.field-meta.xml
<CustomField>
    <fullName>Date_Demo_Held__c</fullName>
    <inlineHelpText>Date Demo is Perfomed</inlineHelpText>
    <label>Date Demo Held</label>
    <type>Date</type>
</CustomField>