force-app/main/default/objects/Activity/fields/Date_Intro_Call_Held__c.field-meta.xml
<CustomField>
    <fullName>Date_Intro_Call_Held__c</fullName>
    <label>Date of Intro Call</label>
    <type>Date</type>
</CustomField>