force-app/main/default/objects/Activity/fields/DC_to_Oppty_Created_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>DC_to_Oppty_Created_Age_Days__c</fullName>
    <formula>IF( ISBLANK(Related_Opportunity__c), &apos;No Oppty Created&apos; , TEXT(DATEVALUE( Related_Opportunity__r.CreatedDate) - Date_DC_Held__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in Days from DC held to Oppty created.</inlineHelpText>
    <label>DC to Oppty Created Age (Days)</label>
    <type>Text</type>
</CustomField>