force-app/main/default/objects/Activity/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <formula>IF(ISPICKVAL( CallType , &quot;Inbound&quot;),5,
  CASE( CallDisposition,
     &quot;Conversation&quot;, 5,
     &quot;Interest, Call Back Later&quot;, 5,
     &quot;Referral&quot;,5,
     &quot;Interest, Send Information&quot;,5,
     &quot;Said to Call Back&quot;,5,
       CASE( RecordType.Name,
        &quot;Demo&quot;,50,
        &quot;Discovery Call&quot;,50,
        &quot;Intro Call&quot;,50,
0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>