force-app/main/default/objects/Activity/fields/Gift_Message__c.field-meta.xml
<CustomField>
    <fullName>Gift_Message__c</fullName>
    <inlineHelpText>Message to include with gift to recipient. Consider including a call to action.</inlineHelpText>
    <label>Gift Message</label>
    <length>160</length>
    <type>Text</type>
</CustomField>