force-app/main/default/objects/Activity/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Gift</fullName>
            </value>
            <value>
                <fullName>eGift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>