force-app/main/default/objects/Activity/fields/Gift_URL__c.field-meta.xml
<CustomField>
    <fullName>Gift_URL__c</fullName>
    <inlineHelpText>Link to specific gift to send.</inlineHelpText>
    <label>Gift URL</label>
    <type>Url</type>
</CustomField>