force-app/main/default/objects/Activity/fields/Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value__c</fullName>
    <inlineHelpText>USD only</inlineHelpText>
    <label>Gift Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>