force-app/main/default/objects/Activity/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <description>Interactions counter for reporting purpose</description>
    <formula>IF( ISPICKVAL( Call_Status__c , &apos;Answered&apos;), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>