force-app/main/default/objects/Activity/fields/Is_Created_Same_as_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_Same_as_Logged_In_User__c</fullName>
    <formula>If( CreatedBy.Id = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is created for reporting purpose.</inlineHelpText>
    <label>Is Created Same as Logged In User?</label>
    <type>Checkbox</type>
</CustomField>