force-app/main/default/objects/Activity/fields/Lead_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Type__c</fullName>
    <inlineHelpText>The field created for reporting purposes. Stamp lead/account type from respective lead/contact records via a flow.</inlineHelpText>
    <label>Lead/Contact Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>