force-app/main/default/objects/Activity/fields/Meeting_Recap__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recap__c</fullName>
    <inlineHelpText>Limited to 255 characters only.</inlineHelpText>
    <label>Meeting Recap (limited to 255 char)</label>
    <type>TextArea</type>
</CustomField>