force-app/main/default/objects/Activity/fields/Meeting_Recap_Cont_d__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recap_Cont_d__c</fullName>
    <label>Meeting Recap Cont&apos;d</label>
    <type>TextArea</type>
</CustomField>