force-app/main/default/objects/Activity/fields/Meeting_Recap_Continued__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recap_Continued__c</fullName>
    <inlineHelpText>Activity text areas only allow 255 characters so this requires multiple fields</inlineHelpText>
    <label>Meeting Recap Continued</label>
    <type>TextArea</type>
</CustomField>