force-app/main/default/objects/Activity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE_to_Reschedule</fullName>
                <label>AE to Reschedule</label>
            </value>
            <value>
                <fullName>Back to the Marketing</fullName>
            </value>
            <value>
                <fullName>Create Opportunity</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Partnership In Progress</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Self Gen Prospect - Rep to Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>