force-app/main/default/objects/Activity/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <description>Number of ARM and/or Vault Users</description>
    <inlineHelpText>Enter numeric value only.</inlineHelpText>
    <label>Number of Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>