force-app/main/default/objects/Activity/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <formula>Related_Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Created Date</label>
    <type>Date</type>
</CustomField>