force-app/main/default/objects/Activity/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <label>Other Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>