force-app/main/default/objects/Activity/fields/Outreach_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Task_Type__c</fullName>
    <inlineHelpText>LinkedIn Task Mapping from Outreach.io</inlineHelpText>
    <label>Outreach Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn: View a Profile</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Send Message</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Send Connection Request</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Interact with Post</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>