force-app/main/default/objects/Activity/fields/Prospect_Questions_Objections__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Questions_Objections__c</fullName>
    <label>Prospect Questions/Objections</label>
    <type>TextArea</type>
</CustomField>