force-app/main/default/objects/Activity/fields/Ramble__Ramble_Chat_Type__c.field-meta.xml
<CustomField>
    <fullName>Ramble__Ramble_Chat_Type__c</fullName>
    <description>Ramble Chat Type</description>
    <label>Ramble Chat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>