force-app/main/default/objects/Activity/fields/Ramble__Ramble_Chat_URL__c.field-meta.xml
<CustomField>
    <fullName>Ramble__Ramble_Chat_URL__c</fullName>
    <description>Ramble Chat URL</description>
    <label>Ramble Chat URL</label>
    <type>Url</type>
</CustomField>