force-app/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Reason for sending it to Back to the Marketing.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Next_Step__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>No Product Fit</fullName>
            </value>
            <value>
                <fullName>Needs Nurturing</fullName>
            </value>
            <value>
                <fullName>No BANT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>