force-app/main/default/objects/Activity/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select existing opportunity to associate with this activity.</inlineHelpText>
    <label>Related Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.WhatId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DC and Demo Activities</relationshipLabel>
    <relationshipName>DC_Demo_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>