force-app/main/default/objects/Activity/fields/Sales_Rep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Notes__c</fullName>
    <label>Sales Rep Notes</label>
    <type>TextArea</type>
</CustomField>