force-app/main/default/objects/Activity/fields/SDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>SDR_Notes__c</fullName>
    <label>SDR Notes</label>
    <type>TextArea</type>
</CustomField>