force-app/main/default/objects/Activity/fields/Share_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Share_Meeting_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Meeting Notes</label>
    <type>Checkbox</type>
</CustomField>