force-app/main/default/objects/Activity/fields/Successful_Intro_Call__c.field-meta.xml
<CustomField>
    <fullName>Successful_Intro_Call__c</fullName>
    <formula>IF(  RecordType.Name = &quot;Intro Call&quot; &amp;&amp; (TEXT(Next_Step__c)=&quot;Demo&quot;||TEXT(Next_Step__c)=&quot;Create Opportunity&quot;),TRUE,FALSE)</formula>
    <label>Successful Intro Call</label>
    <type>Checkbox</type>
</CustomField>