force-app/main/default/objects/Activity/fields/Terminus_Company__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Company__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>