force-app/main/default/objects/Activity/fields/Terminus_Domain__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Domain__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus_Domain</label>
    <type>Url</type>
</CustomField>