force-app/main/default/objects/Activity/fields/Terminus_Email__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Email__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus Email</label>
    <type>Email</type>
</CustomField>