force-app/main/default/objects/Activity/fields/Terminus_Phone__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Phone__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus Phone</label>
    <type>Phone</type>
</CustomField>