force-app/main/default/objects/Activity/fields/Terminus_Subject__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Subject__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>