force-app/main/default/objects/Activity/fields/Terminus_Type__c.field-meta.xml
<CustomField>
    <fullName>Terminus_Type__c</fullName>
    <inlineHelpText>Field created for Terminus Chat Integration.</inlineHelpText>
    <label>Terminus Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>