force-app/main/default/objects/Activity/fields/What_We_Taught_Them__c.field-meta.xml
<CustomField>
    <fullName>What_We_Taught_Them__c</fullName>
    <description>What we taught them section of meeting report</description>
    <label>What We Taught Them</label>
    <type>TextArea</type>
</CustomField>