force-app/main/default/objects/Activity/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Chat</value>
    </filters>
    <label>All Events</label>
    <language>en_US</language>
</ListView>