force-app/main/default/objects/Activity/listViews/CSM_Task_Type.listView-meta.xml
<ListView>
    <fullName>CSM_Task_Type</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>CSM Follow-up</value>
    </filters>
    <label>CSM Task Type</label>
    <language>en_US</language>
</ListView>