force-app/main/default/objects/Activity/listViews/Demo_Call_Tasks.listView-meta.xml
<ListView>
    <fullName>Demo_Call_Tasks</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>Date_Demo_Held__c</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Demo</value>
    </filters>
    <label>Demo Call Tasks</label>
    <language>en_US</language>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>