force-app/main/default/objects/Activity/listViews/Discovery_Call_Tasks.listView-meta.xml
<ListView>
    <fullName>Discovery_Call_Tasks</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Date_DC_Held__c</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Discovery Call</value>
    </filters>
    <label>Discovery Call Tasks</label>
    <language>en_US</language>
</ListView>