force-app/main/default/objects/Activity/listViews/Gift_Request_Tasks.listView-meta.xml
<ListView>
    <fullName>Gift_Request_Tasks</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Gift</value>
    </filters>
    <label>Gift Request Tasks</label>
    <language>en_US</language>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>