force-app/main/default/objects/Activity/listViews/LinkedIn_InMail_Activities.listView-meta.xml
<ListView>
    <fullName>LinkedIn_InMail_Activities</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>InMail Sent</value>
    </filters>
    <label>LinkedIn InMail Activities</label>
    <language>en_US</language>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>