force-app/main/default/objects/Activity/listViews/My_Intro_Call_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Intro_Call_Tasks</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Date_Intro_Call_Held__c</columns>
    <columns>TASK.STATUS</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Intro Call</value>
    </filters>
    <label>My Intro Call Tasks</label>
    <language>en_US</language>
</ListView>