force-app/main/default/objects/Activity/listViews/My_Outreach_Activities.listView-meta.xml
<ListView>
    <fullName>My_Outreach_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.RECORDTYPE</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>Outreach</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Call,Email,Other</value>
    </filters>
    <label>My Outreach Activities</label>
    <language>en_US</language>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>