force-app/main/default/objects/Activity/listViews/My_Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>My_Upcoming_Events</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>My Upcoming Events</label>
    <language>en_US</language>
</ListView>