force-app/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Delegated</filterScope>
    <label>My Delegated Activities</label>
    <language>en_US</language>
</ListView>